cleanup the swagger route and move into routes/swagger.js
